--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,9 @@ buildscript {
         appcompat_version = '1.0.2'
         constraintlayout_version = '1.1.3'
         glide_version = '4.8.0'
+        gson_version = '2.8.5'
         kotlin_version = '1.3.10'
+        ktx_version = '1.0.1'
         legacy_support_version = '1.0.0'
         lifecycle_extension_version = '2.0.0'
         lifecycle_version = '1.1.1'
