--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ buildscript {
         material_version = '1.1.0-alpha01'
         navigation_version = '1.0.0-alpha07'
         retrofit_version = '2.5.0'
+        safeargs_version = '1.0.0-alpha07'
     }
     repositories {
         google()
@@ -22,6 +23,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.2.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "android.arch.navigation:navigation-safe-args-gradle-plugin:$safeargs_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
